# holiday-api-rust

./: .gitignore  .wakatime-project  Cargo.toml  README.md  _config.yml  appveyor.yml  sonar-project.properties  techstack.md  techstack.yml  travis.yml
.github/: dependabot.yml
.github/workflows/: code_climate_coverage.yml  linter.yml  sonar-cloud.yml  sonarcloud.yml
Src/: client.rs  lib.rs  macros.rs  util.rs
src/: lib.rs
