[package]
name = "holiday_api_rust"
version = "0.3.2"
authors = ["Guilherme Branco Stracini <guilherme@guilhermebranco.com.br>"]
edition = "2018"
description = "The Holiday API client wrapper written in Rust."
repository = "https://github.com/guibranco/holiday-api-rust.git"
homepage = "https://github.com/guibranco/holiday-api-rust"
keywords = ["rest", "client", "holiday", "holiday-api"]
categories = ["network-programming", "web-programming::http-client"]
readme = "README.md"
license = "MIT"

[badges]
appveyor = { repository = "guibranco/holiday-api-rust", branch = "master", service = "github" }

[dependencies]
dotenv = "0.11.0"
env_logger = "0.5.9"
futures = "0.1.0"
log = "0.4.8"
prettytable-rs = "0.6.7"
tokio = { version = "1", features = ["full"] }
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
