[package]
name = "holiday_api_rust"
version = "0.3.2"
authors = ["Guilherme Branco Stracini <guilherme@guilhermebranco.com.br>"]
edition = "2018"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
description = "The Holiday API client wrapper."
repository = "https://github.com/guibranco/holiday-api-rust.git"
homepage = "https://github.com/guibranco/holiday-api-rust"
keywords = ["rest", "client", "holiday", "holiday-api"]
categories = ["network-programming", "web-programming::http-client"]
readme = "README.md"
license = "MIT"

[badges]
appveyor = { repository = "guibranco/holiday-api-rust", branch = "main", service = "github" }

[dependencies]
dotenv = "0.11.0"
env_logger = "0.5.9"
futures = "0.1.0"
hyper = "0.11.25"
hyper-tls = "0.1.3"
log = "0.4.8"
prettytable-rs = "0.6.7"
serde = "1.0.42"
serde_derive = "1.0.42"
serde_json = "1.0.16"
tokio-core = "0.1.17"
url = "1.7.0"
